--- a/BacaLexia/StoryBoard/Main.storyboard
+++ b/BacaLexia/StoryBoard/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Main View Controller-->
         <scene sceneID="88R-33-gx0">
             <objects>
-                <viewController storyboardIdentifier="MainViewController" id="WVq-mM-TVC" customClass="MainViewController" customModule="BacaLexia" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Main" id="WVq-mM-TVC" customClass="MainViewController" customModule="BacaLexia" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dBx-1s-VY7">
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,7 +27,7 @@
                                     <constraint firstAttribute="width" constant="424" id="az4-gi-Ufn"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Konsonan" translatesAutoresizingMaskIntoConstraints="NO" id="zKc-1B-sN9">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Konsonan" translatesAutoresizingMaskIntoConstraints="NO" id="zKc-1B-sN9">
                                 <rect key="frame" x="551" y="189" width="424" height="416"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fwR-86-mFg">
