--- a/BacaLexia/StoryBoard/PilihV.storyboard
+++ b/BacaLexia/StoryBoard/PilihV.storyboard
@@ -3,7 +3,7 @@
     <device id="ipad11_0rounded" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,9 +20,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="XPr-iK-HTo" userLabel="background">
                                 <rect key="frame" x="-77" y="-115" width="1454" height="1379"/>
                             </imageView>
-
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a" translatesAutoresizingMaskIntoConstraints="NO" id="uhw-61-OzB" userLabel="A">
-
                                 <rect key="frame" x="117" y="111" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="J6y-xW-Bv7"/>
@@ -127,6 +125,7 @@
         <image name="e" width="2326" height="2326"/>
         <image name="i" width="2326" height="2326"/>
         <image name="koala" width="414" height="229"/>
+        <image name="koalaPapan" width="128" height="128"/>
         <image name="o" width="2326" height="2326"/>
         <image name="u" width="2326" height="2326"/>
         <systemColor name="systemBackgroundColor">
