--- a/BacaLexia/StoryBoard/MenulisA.storyboard
+++ b/BacaLexia/StoryBoard/MenulisA.storyboard
@@ -21,10 +21,6 @@
                                 <rect key="frame" x="-81" y="0.0" width="1457" height="1149"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 7" id="iBd-f8-xTc">
-                                <rect key="frame" x="17" y="255" width="97" height="266"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="board" id="GSC-0F-Rqa">
                                 <rect key="frame" x="254" y="-97" width="679" height="255"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
@@ -33,34 +29,31 @@
                                 <rect key="frame" x="215" y="151" width="760" height="423"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="OpL-ms-Y4A" userLabel="HurufImage">
+                                <rect key="frame" x="443" y="184" width="306" height="341"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 10Koala" id="Q29-2C-5DK">
-                                <rect key="frame" x="797" y="542" width="416" height="256"/>
+                                <rect key="frame" x="848" y="634" width="416" height="256"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="3vV-B1-4Ff" appends="YES" id="Udt-7y-csF"/>
                                 </connections>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="OpL-ms-Y4A" userLabel="HurufImage">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfZ-QN-39R" customClass="PKCanvasView">
                                 <rect key="frame" x="443" y="184" width="306" height="341"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="menulis" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksS-MO-Qv4">
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="menulis" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksS-MO-Qv4">
                                 <rect key="frame" x="268" y="34" width="655" height="102"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="88"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qfZ-QN-39R" customClass="PKCanvasView">
-                                <rect key="frame" x="443" y="184" width="306" height="341"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VVq-nu-k6g">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VVq-nu-k6g">
                                 <rect key="frame" x="22" y="523" width="813" height="302"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                 <subviews>
                                     <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Text Box Menulis" id="W33-a1-9Ed">
-                                        <rect key="frame" x="-12" y="-13" width="835" height="324"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="835" height="323"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                     </imageView>
                                 </subviews>
@@ -68,13 +61,31 @@
                                     <accessibilityTraits key="traits" image="YES"/>
                                 </accessibility>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow3" translatesAutoresizingMaskIntoConstraints="NO" id="v7i-KA-RRk">
-                                <rect key="frame" x="10" y="15" width="73" height="50"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow2" id="iBd-f8-xTc">
+                                <rect key="frame" x="29" y="392" width="82" height="82"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow3" translatesAutoresizingMaskIntoConstraints="NO" id="v7i-KA-RRk">
+                                <rect key="frame" x="29" y="34" width="110" height="110"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eYH-Na-woM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="qfZ-QN-39R" firstAttribute="top" secondItem="OpL-ms-Y4A" secondAttribute="top" id="CDd-Ua-9mB"/>
+                            <constraint firstItem="qfZ-QN-39R" firstAttribute="bottom" secondItem="OpL-ms-Y4A" secondAttribute="bottom" id="CgD-Xh-RCw"/>
+                            <constraint firstItem="qfZ-QN-39R" firstAttribute="trailing" secondItem="OpL-ms-Y4A" secondAttribute="trailing" id="Dp1-eU-ToX"/>
+                            <constraint firstItem="VVq-nu-k6g" firstAttribute="top" secondItem="iBd-f8-xTc" secondAttribute="bottom" constant="49" id="PvD-JF-Se4"/>
+                            <constraint firstItem="qfZ-QN-39R" firstAttribute="leading" secondItem="OpL-ms-Y4A" secondAttribute="leading" id="S1u-Ge-bmi"/>
+                            <constraint firstItem="Q29-2C-5DK" firstAttribute="leading" secondItem="VVq-nu-k6g" secondAttribute="trailing" constant="13" id="TZ9-bA-Fr3"/>
+                            <constraint firstItem="ksS-MO-Qv4" firstAttribute="top" secondItem="eYH-Na-woM" secondAttribute="top" constant="34" id="U0U-OD-uNp"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="VVq-nu-k6g" secondAttribute="bottom" constant="-11" id="a6H-wv-l1z"/>
+                            <constraint firstItem="v7i-KA-RRk" firstAttribute="top" secondItem="eYH-Na-woM" secondAttribute="top" constant="34" id="d8L-2m-DrZ"/>
+                            <constraint firstItem="eYH-Na-woM" firstAttribute="trailing" secondItem="ksS-MO-Qv4" secondAttribute="trailing" constant="271" id="gyC-Do-Bhw"/>
+                            <constraint firstItem="v7i-KA-RRk" firstAttribute="trailing" secondItem="iBd-f8-xTc" secondAttribute="trailing" constant="28" id="hgv-mM-dQY"/>
+                            <constraint firstItem="ksS-MO-Qv4" firstAttribute="centerX" secondItem="qfZ-QN-39R" secondAttribute="centerX" id="jYs-df-rSA"/>
+                            <constraint firstItem="VVq-nu-k6g" firstAttribute="leading" secondItem="eYH-Na-woM" secondAttribute="leading" constant="22" id="upU-BH-6ye"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="KoalaBtn" destination="Q29-2C-5DK" id="YCu-Gk-RNz"/>
@@ -95,9 +106,9 @@
         <image name="Background " width="1454" height="1379"/>
         <image name="Group 10Koala" width="416" height="256"/>
         <image name="Group 6boardbesar" width="768" height="424"/>
-        <image name="Group 7" width="165" height="334"/>
         <image name="Text Box Menulis" width="834" height="323"/>
-        <image name="arrow3" width="151" height="96"/>
+        <image name="arrow2" width="156" height="156"/>
+        <image name="arrow3" width="110" height="110"/>
         <image name="board" width="686" height="256"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
