--- a/BacaLexia/StoryBoard/PilihV.storyboard
+++ b/BacaLexia/StoryBoard/PilihV.storyboard
@@ -20,9 +20,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="XPr-iK-HTo" userLabel="background">
                                 <rect key="frame" x="-77" y="-115" width="1454" height="1379"/>
                             </imageView>
-
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a" translatesAutoresizingMaskIntoConstraints="NO" id="uhw-61-OzB" userLabel="A">
-
                                 <rect key="frame" x="117" y="111" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="J6y-xW-Bv7"/>
@@ -127,6 +125,7 @@
         <image name="e" width="2326" height="2326"/>
         <image name="i" width="2326" height="2326"/>
         <image name="koala" width="414" height="229"/>
+        <image name="koalaPapan" width="128" height="128"/>
         <image name="o" width="2326" height="2326"/>
         <image name="u" width="2326" height="2326"/>
         <systemColor name="systemBackgroundColor">
